[gd_scene load_steps=19 format=3 uid="uid://de70q21ybr5wf"]

[ext_resource type="Script" path="res://menu.gd" id="1_8vc63"]
[ext_resource type="Texture2D" uid="uid://bxwcxwvlj8kfc" path="res://images/menu_background.png" id="2_y4d3w"]
[ext_resource type="Texture2D" uid="uid://b0edlnqbe3qlf" path="res://images/menu_title_01.png" id="3_88y4s"]
[ext_resource type="Texture2D" uid="uid://dvyameys6cr6e" path="res://images/menu_title_02.png" id="4_c4jp2"]
[ext_resource type="Texture2D" uid="uid://bextdj4jwq553" path="res://images/menu_title_03.png" id="5_orfg1"]
[ext_resource type="Texture2D" uid="uid://dv3k1h6aqm4oq" path="res://images/menu_title_04.png" id="6_5hl71"]
[ext_resource type="Texture2D" uid="uid://bd7i6xa0g1ho8" path="res://images/menu_play_01.png" id="7_cnlop"]
[ext_resource type="Texture2D" uid="uid://bibh3b6jlo46g" path="res://images/menu_play_02.png" id="8_diwk2"]
[ext_resource type="Texture2D" uid="uid://dngw6u1snbrdy" path="res://images/menu_play_03.png" id="9_ujlwf"]
[ext_resource type="Texture2D" uid="uid://dy53385it6r7d" path="res://images/menu_play_04.png" id="10_jsi2j"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_epduy"]
bounce = 0.5

[sub_resource type="SpriteFrames" id="SpriteFrames_bmucm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_88y4s")
}, {
"duration": 1.0,
"texture": ExtResource("4_c4jp2")
}, {
"duration": 1.0,
"texture": ExtResource("5_orfg1")
}, {
"duration": 1.0,
"texture": ExtResource("6_5hl71")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vebx1"]
size = Vector2(600, 103)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fobg3"]
size = Vector2(725, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7m8gs"]
size = Vector2(316, 220)

[sub_resource type="SpriteFrames" id="SpriteFrames_v4y0k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_cnlop")
}, {
"duration": 1.0,
"texture": ExtResource("8_diwk2")
}, {
"duration": 1.0,
"texture": ExtResource("9_ujlwf")
}, {
"duration": 1.0,
"texture": ExtResource("10_jsi2j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_8q8eo"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DissolveRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rpvuq"]
_data = {
"fade_in": SubResource("Animation_8q8eo")
}

[node name="Menu" type="Node2D"]
script = ExtResource("1_8vc63")

[node name="BackgroundImageRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_y4d3w")

[node name="Title" type="RigidBody2D" parent="."]
position = Vector2(360, -50)
physics_material_override = SubResource("PhysicsMaterial_epduy")
can_sleep = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Title"]
sprite_frames = SubResource("SpriteFrames_bmucm")
frame_progress = 0.846022

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title"]
shape = SubResource("RectangleShape2D_vebx1")

[node name="TitleFloor" type="StaticBody2D" parent="."]
position = Vector2(360, 530)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TitleFloor"]
shape = SubResource("RectangleShape2D_fobg3")

[node name="PlayButton" type="TouchScreenButton" parent="."]
position = Vector2(360, 850)
shape = SubResource("RectangleShape2D_7m8gs")
shape_visible = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayButton"]
sprite_frames = SubResource("SpriteFrames_v4y0k")
frame_progress = 0.0861766

[node name="DissolveRect" type="ColorRect" parent="."]
visible = false
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="DissolveRect"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_rpvuq")
}

[node name="GamePicker" type="ItemList" parent="."]
visible = false
offset_left = 260.0
offset_top = 1050.0
offset_right = 460.0
offset_bottom = 1250.0

[node name="PickerToggle" type="Button" parent="."]
offset_left = 260.0
offset_top = 1000.0
offset_right = 460.0
offset_bottom = 1040.0
text = "Pick Game"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="item_selected" from="GamePicker" to="." method="_on_game_picker_item_selected"]
[connection signal="pressed" from="PickerToggle" to="." method="_on_picker_toggle_pressed"]
